# sigrok-firmware

./: .gitignore  COPYING  Makefile  Makefile.am  README  autogen.sh  configure.ac
asix-sigma/: LICENSE.Sigma  Makefile.am  asix-sigma-100.fw  asix-sigma-200.fw  asix-sigma-50.fw  asix-sigma-50sync.fw  asix-sigma-phasor.fw
kingst-la2016/: kingst-la-01a2.fw
kingst-la2016/src/: .gitignore  HACKING  Makefile.am  NEWS  README  autogen.sh  configure.ac  gpif-fpga.c  klafw.c
kingst-la2016/src/hw/kingst/: dscr.a51
kingst-la2016/src/include/: command.h  dscr.inc  gpif-fpga.h  klafw.h
nexus-osciprime/: COPYING  Makefile.am  nexus-osciprime.fw
sysclk-lwla/: LICENSE.LWLA  Makefile.am  sysclk-lwla1016-100-ts.rbf  sysclk-lwla1016-100.rbf
